--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,17 @@
 .*.swp
 ^tmp
 
-# Temporary files
+# Temporary files used for building
 Makefile
+MANIFEST
+MYMETA.json
+MYMETA.yml
+*.old
+*.tar.gz
+*.tar
+blib/
+jmvc/seccubus/production.css
+jmvc/seccubus/production.js
+pm_to_blib
+www/seccubus/*
+www/steal
