--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
-# Databases
 *.sqlite
-
-# Mac Stuff
 *.DS_Store
-
-# Temp files
 .*.swp
 tmp/
-
-# Config
 etc/config.xml
-
-# Temporary files used for building
 errors.txt
 Makefile
 MANIFEST
@@ -29,3 +20,4 @@ www/seccubus/*
 www/steal
 junit_output.xml
 etc/config.xml
+logs
