--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,9 +13,12 @@
 - text: News
   url: /news/
 
+- text: Issue tracker
+  url: https://github.com/schubergphilis/Seccubus_v2/issues
+
 - text: Fork on GitHub
   url: https://github.com/schubergphilis/Seccubus_v2/
 
 - text: Download
-  url: https://github.com/schubergphilis/Seccubus_v2/archive/master.zip
+  url: https://github.com/schubergphilis/Seccubus_v2/releases
   button: true
