--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ paginate: 10
 
 name: Seccubus
 description: Easy Automated vulnerability scanning and reporting
-url: https://www.seccubus.com
+url: /Seccubus_v2/
 timezone: Europe/Amsterdam
 
 permalink: pretty
