--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
+# Databases
 *.sqlite
+
+# Mac Stuff
 *.DS_Store
+
+# Temp files
 .*.swp
 tmp/
+
+# Config
 etc/config.xml
+
+# Temporary files used for building
 errors.txt
 Makefile
 MANIFEST
