Fix build error
The page build completed successfully, but returned the following warning:

Your site is using the 'true' highlighter, which is not currently supported on GitHub Pages. Highlighting on your site has been disabled. To re-enable, change your 'highlighter' value to 'pygments' in your '_config.yml'. Check out https://help.github.com/articles/page-build-failed-config-file-error#highlighting-errors for more information.

For information on troubleshooting Jekyll see:

 https://help.github.com/articles/using-jekyll-with-pages#troubleshooting

 If you have any questions please contact us at https://github.com/contact.

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ timezone: Europe/Amsterdam
 
 permalink: pretty
 paginate_path: "news/:num/"
-highlighter: true
+highlighter: pygments
 markdown: redcarpet
 redcarpet:
     extensions:
