--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,13 @@
     "email": "tmaintz@schubergphilis.com"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-browser-sync": "^2.0.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "^0.4.6",
     "jspm": "^0.14.0"
   },
   "jspm": {
