--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
       "angular-animate": "github:angular/bower-angular-animate@^1.3.14",
       "angular-aria": "github:angular/bower-angular-aria@^1.3.14",
       "angular-material": "github:angular/bower-material@^0.8.3",
+      "angular-resource": "github:angular/bower-angular-resource@^1.3.15",
       "angular-ui-router": "github:angular-ui/ui-router@^0.2.13",
       "luxyflux": "github:schubergphilis/luxyflux@master",
       "nkoterba/material-design-iconsets": "github:nkoterba/material-design-iconsets@master"
