--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,25 +15,27 @@
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
-    "jspm": "^0.14.0"
+    "jspm": "^0.15.6"
   },
   "jspm": {
-    "directories": {
-      "lib": "src",
-      "packages": "jspm_packages"
-    },
+    "directories": {},
     "configFile": "config/jspm-config.js",
     "dependencies": {
       "anglue": "github:schubergphilis/anglue@0.2.5",
-      "anglue-decorators": "github:schubergphilis/anglue-decorators@0.2.4",
+      "anglue-decorators": "github:schubergphilis/anglue-decorators@0.2.8",
       "angular": "github:angular/bower-angular@1.3.15",
       "angular-animate": "github:angular/bower-angular-animate@1.3.15",
       "angular-aria": "github:angular/bower-angular-aria@1.3.15",
-      "angular-material": "github:angular/bower-material@0.9.0-rc2",
+      "angular-material": "github:angular/bower-material@0.9.3",
       "angular-resource": "github:angular/bower-angular-resource@1.3.15",
       "angular-ui-router": "github:angular-ui/ui-router@0.2.13",
       "luxyflux": "github:schubergphilis/luxyflux@0.3.5",
       "nkoterba/material-design-iconsets": "github:nkoterba/material-design-iconsets@master"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.1.13",
+      "babel-runtime": "npm:babel-runtime@^5.1.13",
+      "core-js": "npm:core-js@^0.9.4"
     }
   }
 }
