--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
       "angular-sanitize": "github:angular/bower-angular-sanitize@^1.3.15",
       "angular-ui-router": "github:angular-ui/ui-router@0.2.13",
       "luxyflux": "github:schubergphilis/luxyflux@0.3.5",
-      "nkoterba/material-design-iconsets": "github:nkoterba/material-design-iconsets@master"
+      "nkoterba/material-design-iconsets": "github:nkoterba/material-design-iconsets@master",
+      "sroze/ngInfiniteScroll": "github:sroze/ngInfiniteScroll@^1.2.1"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
