--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ services:
 before_script:
   - mysql -e "create database seccubus_create"
   - mysql -e "create database seccubus_upgrade"
+  - mysql -e "create database seccubus_issues"
