--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ before_script:
   - mysql -e "create database seccubus_create"
   - mysql -e "create database seccubus_upgrade"
   - mysql -e "create database seccubus_issues"
+  - cpanm install DBI DBD::mysql
