--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ before_script:
   - mysql -e "create database seccubus_upgrade"
   - mysql -e "create database seccubus"
   - cpanm DBI DBD::mysql
+sudo: false
