--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,10 +13,14 @@
 - text: Documentation
   url: /documentation
   subitems:
-    - text: Version 2
-      url: /documentation#v2
+    - text: User documentation
+      url: /documentation#usr
+    - text: Developer documentation
+      url: /documentation#dev
     - text: FAQ
       url: /documentation#faq
+    - text: License
+      url: /documentation#license
     - text: Subscribe to Mailing List
       url: /mailing_list/subscribe/
     - text: Mailing List Archive
