Remove debug rename menu

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -30,7 +30,7 @@
 - text: GitHub
   url: https://github.com/schubergphilis/Seccubus_v2/
   subitems:
-  - text: Fork
+  - text: Source
     url: https://github.com/schubergphilis/Seccubus_v2/
   - text: Issue tracker
     url: https://github.com/schubergphilis/Seccubus_v2/issues
