--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,24 @@
   "description": "Frontend Application for Seccubus",
   "version": "1.0.0",
   "homepage": "https://github.com/schubergphilis",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/schubergphilis/Seccusbus_v2"
+  },
+  "license" : "Apache-2.0",
   "author": {
     "name": "Tommy Maintz",
     "email": "tmaintz@schubergphilis.com"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-browser-sync": "^2.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-less": "^1.0.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-exec": "^0.4.6",
-    "jspm": "^0.15.6"
+    "grunt": "^1.0.1",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-less": "^1.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-exec": "^1.0.0",
+    "jspm": "^0.16.39"
   },
   "jspm": {
     "directories": {},
