Fixes #397 - HTTP auth header

--- a/etc/config.xml.mysql.example
+++ b/etc/config.xml.mysql.example
@@ -1,6 +1,6 @@
 <?xml version="1.0" standalone='yes'?>
 <!--
-     Copyright 2015 Frank Breedijk
+     Copyright 2017 Frank Breedijk
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -39,4 +39,7 @@
 		<url_head>https://jira.atlassian.com/browse/</url_head>
 		<url_tail></url_tail>
 	</tickets>
+	<auth>
+		<http_auth_header></http_auth_header>
+	</auth>
 </seccubus>
