--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
 - perl Makefile.PL
 - make 
-- travis_wait make test
+- for test in t/*; do echo "*** $test ***";perl $test; done
 - ./build_jmvc
 sudo: false
 notifications:
