--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 - cpanm DBI DBD::mysql
 script:
 - prove -I SeccubusV2
-- (cd mojo; ./seccubus test)
+- (cd mojo; ./seccubus.pl test)
 - ./build_jmvc
 sudo: false
 notifications:
