--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
 - #prove -I SeccubusV2
 - (cd mojo; ./seccubus.pl test)
-- ./build_jmvc
+- #./build_jmvc
 sudo: false
 notifications:
   slack:
