--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,9 @@ machine:
     Europe/Amsterdam # Set the timezone
 
   # Version of ruby to use
-  ruby:
-    version:
-      1.8.7-p358-falcon-perf
+  #ruby:
+  #  version:
+  #    1.8.7-p358-falcon-perf
 
   # Override /etc/hosts
   hosts:
@@ -19,10 +19,13 @@ machine:
 ## Customize checkout
 checkout:
   post:
+    - git fetch --unshallow
 
 ## Customize dependencies
 dependencies:
   pre:
+    - sudo apt-get install cpanminus
+    - cpanm --installdeps --notest .
 
   override:
 
@@ -37,7 +40,10 @@ database:
 ## Customize test commands
 test:
   override:
-    - prove
+    - mysql -e "create database seccubus"
+    - mysql -e "create database seccubus_create"
+    - mysql -e "create database seccubus_upgrade"
+    - prove -I ~/perl5/lib/perl5
   post:
 
 ## Customize deployment commands
