--- a/circle.yml
+++ b/circle.yml
@@ -43,7 +43,10 @@ test:
     - mysql -e "create database seccubus"
     - mysql -e "create database seccubus_create"
     - mysql -e "create database seccubus_upgrade"
-    - prove -I ~/perl5/lib/perl5
+    #- prove -I ~/perl5/lib/perl5
+    - prove -I ~/perl5/lib/perl5 -I lib
+      pwd:
+        - mojo
   post:
 
 ## Customize deployment commands
