--- a/circle.yml
+++ b/circle.yml
@@ -32,7 +32,7 @@ dependencies:
   # we automatically cache and restore many dependencies between
   # builds. If you need to, you can add custom paths to cache:
   cache_directories:
-    - perl5
+    - "~/perl5"
 
 ## Customize database setup
 database:
