--- a/circle.yml
+++ b/circle.yml
@@ -31,8 +31,8 @@ dependencies:
 
   # we automatically cache and restore many dependencies between
   # builds. If you need to, you can add custom paths to cache:
-  cache_directories:
-    - "~/perl5"
+  #cache_directories:
+  #  - "~/perl5"
 
 ## Customize database setup
 database:
