--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Databases
-*.sqlite
-
 # Mac Stuff
 *.DS_Store
 
@@ -8,9 +5,6 @@
 .*.swp
 tmp/
 log/
-
-# MojoExample app
-mojo_example
 
 # Config
 etc/config.xml
@@ -32,10 +26,14 @@ blib/
 jmvc/seccubus/production.css
 jmvc/seccubus/production.js
 pm_to_blib
-www/seccubus/*
-www/steal
 junit_output.xml
 etc/config.xml
 logs
 jmvc/testresults.xml
 .kitchen.yml
+
+# Build directory
+build/
+
+# Docker data dir
+data/
