Env variable is called BASEURI not BASEURL

--- a/docker-files/front-tls.conf
+++ b/docker-files/front-tls.conf
@@ -53,8 +53,8 @@ server {
     root /opt/seccubus/public;
     index seccubus.html;
 
-    rewrite ^%BASEURL%(.*) $1;
-    rewrite ^/?$ " %BASEURL%/seccubus/seccubus.html" redirect;
+    rewrite ^%BASEURI%(.*) $1;
+    rewrite ^/?$ " %BASEURI%/seccubus/seccubus.html" redirect;
 
     location / {
         # First attempt to serve request as file, then
