--- a/circle.yml
+++ b/circle.yml
@@ -35,7 +35,7 @@ machine:
 ## Customize checkout
 checkout:
   post:
-    - git fetch --unshallow
+    - [ -e .git/shallow ] && git fetch --unshallow
 
 ## Customize dependencies
 dependencies:
