--- a/circle.yml
+++ b/circle.yml
@@ -42,6 +42,9 @@ dependencies:
   pre:
     - sudo apt-get install cpanminus
     - cpanm --installdeps --notest .
+    - mysql -e "create database seccubus"
+    - mysql -e "create database seccubus_create"
+    - mysql -e "create database seccubus_upgrade"
 
   override:
 
@@ -57,12 +60,18 @@ database:
 ## Customize test commands
 test:
   override:
-    - mysql -e "create database seccubus"
-    - mysql -e "create database seccubus_create"
-    - mysql -e "create database seccubus_upgrade"
-    - prove -I lib
-    - ./build_all
+    - prove -I lib t/0*
+    - prove -I lib t/1*
+    - prove -I lib t/2*
+    - prove -I lib t/3*
+    - prove -I lib t/4*
+    - prove -I lib t/5*
+    - prove -I lib t/6*
+    - prove -I lib t/7*
+    - prove -I lib t/8*
+    - prove -I lib t/9*
   post:
+    - ./build_all
     - mkdir $CIRCLE_ARTIFACTS/tarball
     - mv build/*.tar.gz $CIRCLE_ARTIFACTS/tarball
 
