--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - checkout
-      - run: apt-get -y install cpanminus
+      - run: apt-get -y install cpanminus build-essential
       - run: cpanm --installdeps --notest .
       - run: mysql -e "create database seccubus"
       - run: prove
