--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
       - checkout
+      - run: apt-get update
       - run: apt-get -y install cpanminus build-essential
       - run: cpanm --installdeps --notest .
       - run: mysql -e "create database seccubus"
