Lets use the mysql image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
 
   prove:
     docker:
-      - image: circleci/ubuntu-server:latest
+      - image: circleci/mysql:latest
 
     steps:
       - checkout
