--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,13 @@
 version: 2
 jobs:
-  deps:
-    docker:
-      - image: perl:latest
-
-    steps:
-      - checkout
-      - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
-
-  prove:
+  debs:
     docker:
       - image: perl:latest
 
     steps:
       - checkout
       - run: apt-get update
-      - run: apt-get -y install build-essential mysql-server
+      - run: apt-get -y install build-essential
       - restore_cache:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
       - run: cpanm --installdeps --notest .
@@ -23,8 +15,24 @@ jobs:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
           paths:
             - "/usr/local/lib/perl5/site_perl"
-      - run: mysql -e "create database seccubus"
-      - run: prove
+
+  tests_0:
+    docker:
+      - image: perl:latest
+
+    steps:
+      - checkout
+      - run: apt-get update
+      - run: apt-get -y install build-essential
+      - restore_cache:
+          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
+      - run: cpanm --installdeps --notest .
+      - save_cache:
+          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
+          paths:
+            - "/usr/local/lib/perl5/site_perl"
+      - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
+      - run: prove t/0
 
 workflows:
 
@@ -32,4 +40,5 @@ workflows:
 
   buildall:
     jobs:
-      - prove
+      - debs
+      - tests_0
