--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,28 @@ jobs:
       - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
       - run: prove t/2*
 
+  tests_5:
+    docker:
+      - image: perl:latest
+        environment:
+          PERL5LIB: "."
+      - image: circleci/mysql:latest
+
+
+    steps:
+      - checkout
+      - run: apt-get update
+      - run: apt-get -y install build-essential mysql-client
+      - restore_cache:
+          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
+      - run: cpanm --installdeps --notest .
+      - save_cache:
+          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
+          paths:
+            - "/usr/local/lib/perl5/site_perl"
+      - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
+      - run: prove t/52*
+
 workflows:
 
   version: 2
@@ -68,9 +90,13 @@ workflows:
   buildall:
     jobs:
       - debs
+      - test
       - tests_0:
           requires:
             - debs
       - tests_2:
+          requires:
+            - debs
+      - tests_5:
           requires:
             - debs
