Set default MYSQL host on CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,12 +31,6 @@ jobs:
       - run: apt-get -y install build-essential
       - restore_cache:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-      - run: cpanm --installdeps --notest .
-      - save_cache:
-          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-          paths:
-            - "/usr/local/lib/perl5/site_perl"
-      - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
       - run: prove t/0*
 
   tests_2:
@@ -51,14 +45,9 @@ jobs:
       - checkout
       - run: apt-get update
       - run: apt-get -y install build-essential mysql-client
+      - run: export MYSQL_HOME=$(pwd)/.circleci
       - restore_cache:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-      - run: cpanm --installdeps --notest .
-      - save_cache:
-          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-          paths:
-            - "/usr/local/lib/perl5/site_perl"
-      - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
       - run: prove t/2*
 
   tests_5:
@@ -73,14 +62,9 @@ jobs:
       - checkout
       - run: apt-get update
       - run: apt-get -y install build-essential mysql-client
+      - run: export MYSQL_HOME=$(pwd)/.circleci
       - restore_cache:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-      - run: cpanm --installdeps --notest .
-      - save_cache:
-          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-          paths:
-            - "/usr/local/lib/perl5/site_perl"
-      - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
       - run: prove t/52*
 
 workflows:
